--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,28 @@
 .video-column {
   transition: all .2s ease-in-out;
-  &:hover{
-    // box-shadow: 10px 10px 10px #888888;
+  &:hover {
     z-index: 2;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
     transform: scale(1.1);
+    background: linear-gradient(
+      rgba(255, 0, 0, 0.45),
+      rgba(255, 0, 0, 0.45)
+    ),
+  }
+}
+
+.video-column-link {
+  transition: all .5s ease-in-out;
+  color: white;
+  border: solid 5px white;
+  font-weight: bold;
+  &:hover {
+    color: black;
+    background-color: white;
+    cursor: pointer;
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    transform: scale(1.5);
   }
 }
