--- a/src/App.scss
+++ b/src/App.scss
@@ -2,28 +2,88 @@
   transition: all .5s ease-in-out;
   &:hover {
     z-index: 2;
-    -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    transform: scale(1.1);
+    -webkit-transform: scale(1.025);
+    -ms-transform: scale(1.025);
+    transform: scale(1.025);
+  }
+  &:nth-child(2) {
+    margin: 0 5px;
   }
 }
 
 .video-column-link {
-  transition: all .5s ease-in-out;
+  // transition: all .5s ease-in-out;
   color: white;
-  font-weight: bold;
-  border: solid white 5px;
+  // font-weight: bold;
+  // border: solid white 5px;
   &:hover {
-    color: black;
-    background-color: white;
+    // color: black;
+    // background-color: white;
     cursor: pointer;
-    -webkit-transform: scale(1.5);
-    -ms-transform: scale(1.5);
-    transform: scale(1.5);
+    // -webkit-transform: scale(1.5);
+    // -ms-transform: scale(1.5);
+    // transform: scale(1.5);
+    -webkit-animation: rainbow 2s infinite;
+    -ms-animation: rainbow 2s infinite;
+    // -o-animation:rainbow 1s infinite;
+    animation: rainbow 2s infinite;
   }
 }
 
 body {
   margin: 0;
   padding: 0;
+}
+
+@-webkit-keyframes rainbow {
+0% {color: #ff0000;}
+10% {color: #ff8000;}
+20% {color: #ffff00;}
+30% {color: #80ff00;}
+40% {color: #00ff00;}
+50% {color: #00ff80;}
+60% {color: #00ffff;}
+70% {color: #0080ff;}
+80% {color: #0000ff;}
+90% {color: #8000ff;}
+100% {color: #ff0080;}
+}
+@-ms-keyframes rainbow {
+0% {color: #ff0000;}
+10% {color: #ff8000;}
+20% {color: #ffff00;}
+30% {color: #80ff00;}
+40% {color: #00ff00;}
+50% {color: #00ff80;}
+60% {color: #00ffff;}
+70% {color: #0080ff;}
+80% {color: #0000ff;}
+90% {color: #8000ff;}
+100% {color: #ff0080;}
+}
+// @-o-keyframes rainbow {
+// 0% {color: #ff0000;}
+// 10% {color: #ff8000;}
+// 20% {color: #ffff00;}
+// 30% {color: #80ff00;}
+// 40% {color: #00ff00;}
+// 50% {color: #00ff80;}
+// 60% {color: #00ffff;}
+// 70% {color: #0080ff;}
+// 80% {color: #0000ff;}
+// 90% {color: #8000ff;}
+// 100% {color: #ff0080;}
+// }
+@keyframes rainbow {
+0% {color: #ff0000;}
+10% {color: #ff8000;}
+20% {color: #ffff00;}
+30% {color: #80ff00;}
+40% {color: #00ff00;}
+50% {color: #00ff80;}
+60% {color: #00ffff;}
+70% {color: #0080ff;}
+80% {color: #0000ff;}
+90% {color: #8000ff;}
+100% {color: #ff0080;}
 }
