--- a/src/App.scss
+++ b/src/App.scss
@@ -23,10 +23,10 @@
     // -webkit-transform: scale(1.5);
     // -ms-transform: scale(1.5);
     // transform: scale(1.5);
-    -webkit-animation: rainbow 2s infinite;
-    -ms-animation: rainbow 2s infinite;
-    // -o-animation:rainbow 1s infinite;
-    animation: rainbow 2s infinite;
+    // -webkit-animation: rainbow 2s infinite;
+    // -ms-animation: rainbow 2s infinite;
+    // // -o-animation:rainbow 1s infinite;
+    // animation: rainbow 2s infinite;
   }
 }
 
@@ -35,33 +35,7 @@ body {
   padding: 0;
 }
 
-@-webkit-keyframes rainbow {
-0% {color: #ff0000;}
-10% {color: #ff8000;}
-20% {color: #ffff00;}
-30% {color: #80ff00;}
-40% {color: #00ff00;}
-50% {color: #00ff80;}
-60% {color: #00ffff;}
-70% {color: #0080ff;}
-80% {color: #0000ff;}
-90% {color: #8000ff;}
-100% {color: #ff0080;}
-}
-@-ms-keyframes rainbow {
-0% {color: #ff0000;}
-10% {color: #ff8000;}
-20% {color: #ffff00;}
-30% {color: #80ff00;}
-40% {color: #00ff00;}
-50% {color: #00ff80;}
-60% {color: #00ffff;}
-70% {color: #0080ff;}
-80% {color: #0000ff;}
-90% {color: #8000ff;}
-100% {color: #ff0080;}
-}
-// @-o-keyframes rainbow {
+// @-webkit-keyframes rainbow {
 // 0% {color: #ff0000;}
 // 10% {color: #ff8000;}
 // 20% {color: #ffff00;}
@@ -74,16 +48,42 @@ body {
 // 90% {color: #8000ff;}
 // 100% {color: #ff0080;}
 // }
-@keyframes rainbow {
-0% {color: #ff0000;}
-10% {color: #ff8000;}
-20% {color: #ffff00;}
-30% {color: #80ff00;}
-40% {color: #00ff00;}
-50% {color: #00ff80;}
-60% {color: #00ffff;}
-70% {color: #0080ff;}
-80% {color: #0000ff;}
-90% {color: #8000ff;}
-100% {color: #ff0080;}
-}
+// @-ms-keyframes rainbow {
+// 0% {color: #ff0000;}
+// 10% {color: #ff8000;}
+// 20% {color: #ffff00;}
+// 30% {color: #80ff00;}
+// 40% {color: #00ff00;}
+// 50% {color: #00ff80;}
+// 60% {color: #00ffff;}
+// 70% {color: #0080ff;}
+// 80% {color: #0000ff;}
+// 90% {color: #8000ff;}
+// 100% {color: #ff0080;}
+// }
+// // @-o-keyframes rainbow {
+// // 0% {color: #ff0000;}
+// // 10% {color: #ff8000;}
+// // 20% {color: #ffff00;}
+// // 30% {color: #80ff00;}
+// // 40% {color: #00ff00;}
+// // 50% {color: #00ff80;}
+// // 60% {color: #00ffff;}
+// // 70% {color: #0080ff;}
+// // 80% {color: #0000ff;}
+// // 90% {color: #8000ff;}
+// // 100% {color: #ff0080;}
+// // }
+// @keyframes rainbow {
+// 0% {color: #ff0000;}
+// 10% {color: #ff8000;}
+// 20% {color: #ffff00;}
+// 30% {color: #80ff00;}
+// 40% {color: #00ff00;}
+// 50% {color: #00ff80;}
+// 60% {color: #00ffff;}
+// 70% {color: #0080ff;}
+// 80% {color: #0000ff;}
+// 90% {color: #8000ff;}
+// 100% {color: #ff0080;}
+// }
