--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "Akkurat-Light";
-  src: font-files('fonts/Akkurat-Light.otf', 'fonts/Akkurat-Light.ttf')
+  src: font-files('fonts/Akkurat-Light.otf', 'fonts/Akkurat-Light.ttf');
 }
 @font-face {
   font-family: "Akkurat-Bold";
-  src: font-files('fonts/Akkurat-Bold.otf', 'fonts/Akkurat-Bold.ttf')
+  src: font-files('fonts/Akkurat-Bold.otf', 'fonts/Akkurat-Bold.ttf');
 }
 
 $break-small: 320px;
