import fonts through js instead of scss

--- a/src/App.scss
+++ b/src/App.scss
@@ -62,8 +62,7 @@ $break-large: 1200px;
 }
 
 .email {
-  // @include font-face(Akkurat-Light, fonts/Akkurat-Light);
-  font-family: "Akkurat-Light";
+  // font-family: "Akkurat-Light";
   font-size: 1.5em;
   color: #1A1919;
 }
