--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,11 @@
-@font-face {
-  font-family: "Akkurat-Light";
-  src: font-files('fonts/Akkurat-Light.otf', 'fonts/Akkurat-Light.ttf');
-}
-@font-face {
-  font-family: "Akkurat-Bold";
-  src: font-files('fonts/Akkurat-Bold.otf', 'fonts/Akkurat-Bold.ttf');
-}
+// @font-face {
+//   font-family: "Akkurat-Light";
+//   src: font-files('fonts/Akkurat-Light.otf', 'fonts/Akkurat-Light.ttf');
+// }
+// @font-face {
+//   font-family: "Akkurat-Bold";
+//   src: font-files('fonts/Akkurat-Bold.otf', 'fonts/Akkurat-Bold.ttf');
+// }
 
 $break-small: 320px;
 $break-iPhone-plus: 400px;
@@ -55,7 +55,7 @@ $break-large: 1200px;
 }
 
 .contact-us {
-  font-family: 'Akkurat-Bold';
+  // font-family: 'Akkurat-Bold';
   font-size: 3.25em;
   margin: 0;
   color: #1A1919;
