--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: "Akkurat-Light";
+  font-family: "akkuratl";
   // src: font-files('fonts/Akkurat-Light.otf', 'fonts/Akkurat-Light.ttf');
   src: url('../public/fonts/Akkurat-Light.otf');
 }
 @font-face {
-  font-family: "Akkurat-Bold";
+  font-family: "akkuratb";
   // src: font-files('fonts/Akkurat-Bold.otf', 'fonts/Akkurat-Bold.ttf');
   src: url('../public/fonts/Akkurat-Bold.otf');
 }
@@ -57,7 +57,7 @@ $break-large: 1200px;
 }
 
 .contact-us {
-  font-family: 'Akkurat-Bold';
+  font-family: 'akkuratb';
   font-size: 3.25em;
   margin: 0;
   // color: #1A1919;
@@ -66,7 +66,7 @@ $break-large: 1200px;
 }
 
 .email {
-  font-family: "Akkurat-Light";
+  font-family: "akkuratl";
   font-size: 1.5em;
   color: #1A1919;
   text-decoration: none;
