style about section

--- a/src/App.scss
+++ b/src/App.scss
@@ -64,11 +64,13 @@ $break-large: 1200px;
   text-shadow: -6.5px 6.5px #1A1919;
 }
 
-.email {
+.about-us {
   font-family: "akkuratl";
-  color: #1A1919;
-  text-decoration: none;
-  cursor: pointer;
+}
+
+.email-phone {
+  font-family: "akkuratl";
+  color: #E4794A;
 }
 
 .social-icons {
